manifests/minecraft/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dripcraft-gateway
spec:
  gatewayClassName: eg
  listeners:
  - name: dripcraft-default
    protocol: TCP
    port: 25565
    allowedRoutes:
      kinds:
      - kind: TCPRoute
