manifests/minecraft/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2 # TCPRoute is often still in v1alpha2
kind: TCPRoute
metadata:
  name: java-route
spec:
  parentRefs:
  - name: dripcloud-gateway
    sectionName: java-tcp
  rules:
  - backendRefs:
    - name: dripcraft-minecraft
      port: 25565
